更新演示动画，更新demo

--- a/fbCharmDemo/fbCharmDemo/Base.lproj/Main.storyboard
+++ b/fbCharmDemo/fbCharmDemo/Base.lproj/Main.storyboard
@@ -69,8 +69,8 @@
                                     <action selector="OnKernChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="KaI-Sk-95X"/>
                                 </connections>
                             </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="字重 light" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mU8-dd-hjd">
-                                <rect key="frame" x="27" y="741" width="73" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="字重 Heavy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mU8-dd-hjd">
+                                <rect key="frame" x="27" y="741" width="87" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
